# grader

./: .env  .gitignore  .pre-commit-config.yaml  .yaspellerrc.json  README.md  convert  links_creating.py  main.py  mypy.ini  pyproject.toml  symlinks_test.py  task_directory.py  tet.py
.devcontainer/: devcontainer.json  post-create.sh  requirements.txt
checkers/: pyproject.toml
cli/: cli_argument_parser.py  list.py  user_input.py
cli/command/: hint_command.py  run_command.py  submit_command.py  text_command.py  user_command.py
cli/solution/: solution.py  solution_of.py
cli/task/: task.py  task_of.py
cli/test/: test.py  test_result.py  test_series.py  test_status.py
cli/testing_system/: command_line_testing_system.py  testing_system.py
eobot/: content.py  event_loop.py  polling.py  pyproject.toml  state.py
eobot/arguments/: argument.py  method_arguments.py
eobot/bot/: inner_bot.py  token.py
eobot/eobot/: event_loop.py  polling.py  symlinks_test.py
eobot/examples/: buttons.py  buttons_test.py  document_echo.py  echo.py  grader_test.py  task_grader.py
eobot/fsm/: fsm.py  user_state.py
eobot/methods/: close.py  get_file.py  get_me.py  get_my_description.py  get_my_name.py  get_my_short_description.py  get_user_profile_photos.py  logout.py  method.py  raw_method.py  send_message.py  set_my_commands.py  (+3 more)
grader/: pyproject.toml
interactive_bash/: pyproject.toml
interactive_bash/interactive_bash/: main.py
logger/: pyproject.toml
source_directory/: directory.py  files_healthcheck.py
src/: content.py  convert  event_loop.py  exceptions.py  polling.py  state.py  test.py
task/: directory.py  symlink.py  task.py
tmpgrader/: pyproject.toml
(+288 files in other folders)
