[tool.poetry]
name = "grader"
version = "0.1.0"
description = ""
authors = ["Probirochniy <afl_damir@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
interactive_bash = {path = "./interactive_bash/"}
more-itertools = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 60
