[tool.poetry]
name = "grader"
version = "0.1.0"
description = ""
authors = ["Probirochniy <afl_damir@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tmpgrader = {path = "./tmpgrader"}
more-itertools = "^9.1.0"
pydantic = "^1.10.9"
requests = "^2.31.0"
types-requests = "^2.31.0.1"
dacite = "^1.8.1"
python-dotenv = "^1.0.0"
logger = {path = "./logger"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 60
